--- a/formpractice.html
+++ b/formpractice.html
@@ -27,6 +27,48 @@
         <input type="email" id="email" name="email" placeholder="v@google.net">
     </div>
 
+    <fieldset class="legacy-form-row">
+
+        <legend>Type of Talk</legend>
+
+        <input type="radio" id="talk-type-1" name="talk-type" value="main-stage"/>
+        <label for="talk-type-1" class="radio-label">Main Stage</label>
+
+        <input type="radio" id="talk-type-2" name="talk-type" value="workshop"/>
+        <label for="talk-type-2" class="radio-label">Workshop</label>
+
+
+    </fieldset>
+
+    <div class="form-row">
+
+        <label for="t-shirt">T-Shirt Size</label>
+        <select name="t-shirt" id="t-shirt">
+            <option value="xs">Extra Small</option>
+            <option value="s">Small</option>
+            <option value="m">Medium</option>
+            <option value="l">Large</option>
+        </select>
+    </div>
+
+    <div class="form-row">
+        <label for="abstract">Abstract</label>
+        <textarea name="abstract" id="abstract" cols="30" rows="10"></textarea>
+        <div class="instructions">Describe your talk in 500 words or less</div>
+    </div>
+
+    <div class="form-row">
+        <label for="available" class="checkbox-label">
+        <input type="checkbox" id="available" name="available" value="is-available"/>
+        <span>I'm actually available the date of the talk</span>
+        </label>
+
+    </div>
+
+    <div class="form-row">
+        <button>Submit</button>
+    </div>
+
 
 </form>
 
